--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,3 +1,7 @@
-<h1>This is a Routing Page.</h1>
-
-<router-outlet></router-outlet>
+<div class="container">
+  <div class="todo-app">
+    <app-header></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+  </div>
+</div>
